@@ -50,6 +50,9 @@ it will create and use a SQLite3 database under the runtime directory. You
 can explicitly specify a database for it to use by setting its
 [connectionID|CDbCache::connectionID] property.
 
+   - [CZendDataCache]: uses Zend Data Cache as the underlying caching medium.
+Note, this has been available since version 1.0.4.
+
    - [CDummyCache]: presents dummy cache that does no caching at all. The purpose
 of this component is to simplify the code that needs to check the availability of cache.
 For example, during development or if the server doesn't have actual cache support, we
